字符串倒叙

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 /Array/ipch
+/Array/Array.opensdf
 /Array/Array.sdf
 /Array/Array.suo
 /Array/Array/Debug
-/Array/Array.opensdf
+
+/String/ipch
+/String/String.opensdf
+/String/String.sdf
+/String/String.suo
+/String/String/Debug
